--- a/styles/adoptionmanager.css
+++ b/styles/adoptionmanager.css
@@ -16,6 +16,14 @@
 
 .card {
     padding-bottom: 20px;
+    width: 18rem;
+    margin: 10px
+}
+
+.card-img-top {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 .container {
@@ -25,7 +33,7 @@
 
 .adopt-me-button {
     position : absolute;
-    left: 10px;
+    left: 0px;
     bottom: 0px;
 
 }
@@ -41,6 +49,7 @@ main__content {
     width: 100%;
     height: auto;
     margin-bottom: 20px;
+    max-width: 100%; /* Ensures the image doesn't exceed the container's width */
 }
 
 
