--- a/styles/adoptionmanager.css
+++ b/styles/adoptionmanager.css
@@ -49,7 +49,7 @@ main__content {
     width: 100%;
     height: auto;
     margin-bottom: 20px;
-    max-width: 100%; /* Ensures the image doesn't exceed the container's width */
+    max-width: 100%;
 }
 
 
