--- a/styles/adoptionmanager.css
+++ b/styles/adoptionmanager.css
@@ -8,11 +8,11 @@
     color: #308292;
 }
 
-.btn custom-btn-outline-success{
-    /*
+/*.btn custom-btn-outline-success{
+    
     *create a custom btn
-   */
-}
+   
+}*/
 
 .card {
     padding-bottom: 20px;
