--- a/styles/contact.css
+++ b/styles/contact.css
@@ -13,6 +13,11 @@ header {
     text-align: center;
 }
 
+.contact-info h1 {
+    margin-top: 2.5%;
+    text-align: center;
+}
+
 .contact-form form {
     margin: auto;
     width: 80%;
@@ -43,15 +48,11 @@ header {
     padding: 15px;
 }
 
-footer {
-    background-color: #f2f2f2;
-    text-align: center;
-    padding: 10px 0;
-}
 
 .contact-form h2 {
     text-align: center;
 }
+
 
 
 @media (max-width: 768px) {
@@ -68,6 +69,12 @@ footer {
     }
 
     .contact-info h1, .contact-form h1 {
-        font-size: 1.5rem;
+        font-size: 2rem;
+        margin-top: 15%;
+        text-align: center;
+    }
+
+    footer{
+        font-size: 0.8rem;
     }
 }
