--- a/styles/donation.css
+++ b/styles/donation.css
@@ -136,6 +136,18 @@ footer {
     min-width: 100px;
     border: 4px solid black;
 }
+body {
+    background: radial-gradient(circle at top left, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle at bottom left, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle at top right, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle at bottom right, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle, transparent 10%, #ffffff 26%), /*This is actually the largest color*/
+    linear-gradient(0deg, transparent 44%, var(--pattern1) 45%, var(--pattern1) 55%, transparent 56%),
+    linear-gradient(90deg, transparent 44%, var(--pattern1) 45%, var(--pattern1) 55%, transparent 56%);
+background-size: 3em 3em;
+background-color: rgba(255, 255, 255, 1); /* Set background color with 80% opacity */
+}
+
 
 @media (max-width: 768px) {
     .tier img {
