--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -252,7 +252,7 @@ footer{
         font-size: medium;
     }
     .card-text{
-        font-size: small;
+        font-size: medium;
     }
 
     #featured-animals-container{
