--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,10 @@
 body {
     font-family: Arial, sans-serif;
+    font-size: 18px;
+}
+
+h1, h2, h3 {
+    font-family: 'Ultra', serif; 
 }
 
 header {
@@ -8,20 +13,26 @@ header {
     text-align: center;
 }
 
+.normal-text {
+    font-family: 'Belanosima', sans-serif;
+    font-weight: 400; 
+}
+
+
 .contact-info {
     margin: 20px 0;
     text-align: center;
 }
 
 .contact-info h1 {
-    margin-top: 2.5%;
+    margin-top: 3.5%;
     text-align: center;
 }
 
 .contact-form form {
     margin: auto;
     width: 80%;
-    max-width: 400px;
+    max-width: 500px;
 }
 
 .contact-form label {
@@ -40,7 +51,7 @@ header {
 
 .company-images img {
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     margin: 10px;
     display: block;
     margin-left: auto;
@@ -53,6 +64,22 @@ header {
     text-align: center;
 }
 
+p {
+    margin: 0;
+}
+
+
+body{
+    background: radial-gradient(circle at top left, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle at bottom left, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle at top right, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle at bottom right, transparent 9%, var(--pattern1) 10%, var(--pattern1) 15%, transparent 16%),
+    radial-gradient(circle, transparent 10%, #ffffff 26%), /*This is actually the largest color*/
+    linear-gradient(0deg, transparent 44%, var(--pattern1) 45%, var(--pattern1) 55%, transparent 56%),
+    linear-gradient(90deg, transparent 44%, var(--pattern1) 45%, var(--pattern1) 55%, transparent 56%);
+background-size: 3em 3em;
+background-color: rgba(255, 255, 255, 1); /* Set background color with 80% opacity */
+}
 
 
 @media (max-width: 768px) {
