font link check
added the font link on all 7 html pages

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -36,7 +36,7 @@
 }
 
 .text-important, a{
-  font-family: 'Belanosima', sans-serif;
+  font-family: 'Belanosima', serif;
   font-weight: 600;
   
 
@@ -109,5 +109,5 @@ p,h1,h2,h3,h4,h5,h6
       margin: 0.3rem;
   }
   
-      
+  
 }
