--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -131,9 +131,10 @@ a:visited {
 }
 .content{
     border-radius: 10px;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: center;
 }
 
 
