--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,9 @@
+@import url("universal.css");
+
+main {
+    padding-top: calc(var(--navbar-height) + 20px);
+}
+
 body {
     font-family: Arial, sans-serif;
     font-size: 18px;
@@ -27,9 +33,7 @@ header {
 }
 
 .contact-info h1 {
-    margin-top: 5.5%;
     margin-bottom: 0;
-    padding-top: 7%;
     text-align: center;
 }
 
@@ -41,7 +45,6 @@ header {
 
 .contact-form label {
     display: block;
-    margin-top: 10px;
 }
 
 .contact-form input,
@@ -49,7 +52,6 @@ header {
 .contact-form button {
     width: 100%;
     padding: 8px;
-    margin-top: 5px;
     box-sizing: border-box;
 }
 
@@ -63,7 +65,10 @@ header {
     padding: 15px;
 }
 
-
+.contact-btn{
+    border: 2px solid var(--brown1);
+    border-radius: 10px;
+}
 .contact-form h2 {
     text-align: center;
 }
@@ -73,9 +78,8 @@ p {
 }
 
 .container{
-    width: 25%;
+    width:fit-content;
     background-color: rgba(227, 236, 99, 0.432);
-    padding: 20px;
     border-radius: 60px;
 }
 
@@ -107,7 +111,6 @@ background-color: rgba(255, 255, 255, 1);
 
     .contact-info h1, .contact-form h1 {
         font-size: 2rem;
-        margin-top: 15%;
         text-align: center;
     }
 
