--- a/styles/adoptionmanager.css
+++ b/styles/adoptionmanager.css
@@ -1,3 +1,8 @@
+@import url("universal.css");
+
+main{
+    padding-top: var(--navbar-height);
+}
 body {
     font-family: Arial, sans-serif;
     font-size: 18px;
