--- a/styles/donation.css
+++ b/styles/donation.css
@@ -120,11 +120,19 @@ main {
 }
 
 footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-top: auto;
     width: 100%;
-    
+    background-color: rgb(255, 241, 176);
     bottom: 0;
     left: 0;
+}
+
+
+.gtranslate_wrapper {
+    align-self: flex-end;
 }
 
 #donateButton {
