--- a/styles/faq.css
+++ b/styles/faq.css
@@ -199,6 +199,10 @@ footer {
     font-size: medium;
 }
 
+.responsive-iframe {
+    width: 100%;
+    border: none; 
+}
 
 .gtranslate_wrapper {
     align-self: flex-end;
