--- a/styles/faq.css
+++ b/styles/faq.css
@@ -31,6 +31,11 @@ body{
     width:fit-content
 }
 
+.responsive-iframe {
+    width: 100%;
+    border: none; 
+}
+
 body {
     font-family: Arial, sans-serif;
     font-size: 20px;
