--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -42,9 +42,10 @@
     object-fit:cover;
 }
 
-/* link tags
-*  A lot of Bootstrap overriding..
-*/
+iframe {
+    width: 100%;
+    height: 600px; 
+}
 
 a {
     text-decoration: none;
